# mcp-test

./: .gitignore  .replit  README.md  calendar_service.py  config.py  main.py  mcp_server.py  pyproject.toml  query_parser.py  replit.md  run_calendar.sh  test_auth.py  test_mcp_driver.py  test_mcp_queries.py  usage_examples.md
claude-config/: local.json  remote.json
